--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -5,3 +5,18 @@
 body{
     @apply text-gray-800;
 }
+
+@keyframes marquee {
+    0% {
+      transform: translateX(100%);
+    }
+    100% {
+      transform: translateX(-100%);
+    }
+  }
+  
+  .animate-marquee {
+    display: inline-block;
+    white-space: nowrap;
+    animation: marquee 30s linear infinite;
+  }
